@@ -113,6 +113,14 @@ LIBPATH="$LIBPATH":"${JAVA_HOME}"/lib/s390/default
 LIBPATH="$LIBPATH":"${JAVA_HOME}"/lib/s390/j9vm
 LIBPATH="$LIBPATH":"${LIBRARY_PATH}"
 
+# Check whether Java 17 is used
+java_version=$("${JAVA_HOME}/bin/java" -version 2>&1)
+java_version_short=$(echo "${java_version}" | grep ^"java version" | sed -e "s/java version //g"| sed -e "s/\"//g")
+if [[ $java_version_short == "" ]]; then
+    java_version_short=$(echo "${java_version}" | grep ^"openjdk version" | sed -e "s/openjdk version //g"| sed -e "s/\"//g")
+fi
+java_major_version=$(echo "${java_version_short}" | cut -d '.' -f 1)
+
 ATTLS_ENABLED="false"
 if [ -n "$(echo ${ZWE_configs_spring_profiles_active:-} | awk '/^(.*,)?attls(,.*)?$/')" ]; then
     ATTLS_ENABLED="true"
@@ -138,9 +146,19 @@ truststore_location="${ZWE_configs_certificate_truststore_file:-${ZWE_zowe_certi
 #   -Dapiml.service.preferIpAddress=${APIML_PREFER_IP_ADDRESS:-false} \
 
 CACHING_CODE=CS
-_BPX_JOBNAME=${ZWE_zowe_job_prefix}${CACHING_CODE} java \
-  -Xms${ZWE_configs_heap_init:-32}m -Xmx${ZWE_configs_heap_max:-512}m \
-   ${QUICK_START} \
+java_command=${ZWE_zowe_job_prefix}${CACHING_CODE} java \
+    -Xms${ZWE_configs_heap_init:-32}m -Xmx${ZWE_configs_heap_max:-512}m \
+    ${QUICK_START}
+if [ ${java_major_version} -ge 17 ]; then
+    java_command="${java_command} \
+            --add-opens=java.base/java.lang=ALL-UNNAMED \
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
+            --add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED \
+            --add-opens=java.base/java.util=ALL-UNNAMED \
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
+            --add-opens=java.base/javax.net.ssl=ALL-UNNAMED"
+fi
+_BPX_JOBNAME="${java_command} \
   -Dibm.serversocket.recover=true \
   -Dfile.encoding=UTF-8 \
   -Djava.io.tmpdir=${TMPDIR:-/tmp} \
@@ -177,7 +195,7 @@ _BPX_JOBNAME=${ZWE_zowe_job_prefix}${CACHING_CODE} java \
   -Djava.protocol.handler.pkgs=com.ibm.crypto.provider \
   -Djavax.net.debug=${ZWE_configs_sslDebug:-""} \
   -Djava.library.path=${LIBPATH} \
-  -jar "${JAR_FILE}" &
+  -jar "${JAR_FILE}" &"
 pid=$!
 echo "pid=${pid}"
 
