@@ -132,6 +132,14 @@ LIBPATH="$LIBPATH":"${JAVA_HOME}/lib/s390/default"
 LIBPATH="$LIBPATH":"${JAVA_HOME}/lib/s390/j9vm"
 LIBPATH="$LIBPATH":"${LIBRARY_PATH}"
 
+# Check whether Java 17 is used
+java_version=$("${JAVA_HOME}/bin/java" -version 2>&1)
+java_version_short=$(echo "${java_version}" | grep ^"java version" | sed -e "s/java version //g"| sed -e "s/\"//g")
+if [[ $java_version_short == "" ]]; then
+    java_version_short=$(echo "${java_version}" | grep ^"openjdk version" | sed -e "s/openjdk version //g"| sed -e "s/\"//g")
+fi
+java_major_version=$(echo "${java_version_short}" | cut -d '.' -f 1)
+
 keystore_type="${ZWE_configs_certificate_keystore_type:-${ZWE_zowe_certificate_keystore_type:-PKCS12}}"
 keystore_pass="${ZWE_configs_certificate_keystore_password:-${ZWE_zowe_certificate_keystore_password}}"
 key_pass="${ZWE_configs_certificate_key_password:-${ZWE_zowe_certificate_key_password:-${keystore_pass}}}"
@@ -147,9 +155,19 @@ truststore_location="${ZWE_configs_certificate_truststore_file:-${ZWE_zowe_certi
 # -Dapiml.service.preferIpAddress=${APIML_PREFER_IP_ADDRESS:-false} \
 
 DISCOVERY_CODE=AD
-_BPX_JOBNAME=${ZWE_zowe_job_prefix}${DISCOVERY_CODE} java \
+java_command=${ZWE_zowe_job_prefix}${DISCOVERY_CODE} java \
     -Xms${ZWE_configs_heap_init:-32}m -Xmx${ZWE_configs_heap_max:-512}m \
-    ${QUICK_START} \
+    ${QUICK_START}
+if [ ${java_major_version} -ge 17 ]; then
+    java_command="${java_command} \
+            --add-opens=java.base/java.lang=ALL-UNNAMED \
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
+            --add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED \
+            --add-opens=java.base/java.util=ALL-UNNAMED \
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
+            --add-opens=java.base/javax.net.ssl=ALL-UNNAMED"
+fi
+_BPX_JOBNAME="${java_command} \
     -Dibm.serversocket.recover=true \
     -Dfile.encoding=UTF-8 \
     -Djava.io.tmpdir=${TMPDIR:-/tmp} \
@@ -182,7 +200,7 @@ _BPX_JOBNAME=${ZWE_zowe_job_prefix}${DISCOVERY_CODE} java \
     -Dloader.path=${DISCOVERY_LOADER_PATH} \
     -Djavax.net.debug=${ZWE_configs_sslDebug:-""} \
     -Djava.library.path=${LIBPATH} \
-    -jar "${JAR_FILE}" &
+    -jar "${JAR_FILE}" &"
 pid=$!
 echo "pid=${pid}"
 
